tests/error/types-5.moc
void main() {
    int print = 42;
    print("salut");
}
